--- a/src/scss/Button.scss
+++ b/src/scss/Button.scss
@@ -1,5 +1,5 @@
 .my-button {
-    background-color: #4CAF50; /* Зеленый цвет фона */
+    background-color: #4CAF50!important; /* Зеленый цвет фона */
     border: none; /* Без рамки */
     color: white; /* Белый цвет текста */
     padding: 15px 32px; /* Отступы внутри кнопки */
@@ -16,3 +16,5 @@
 .my-button:hover {
     background-color: #45a049; /* Изменение цвета при наведении */
 }
+
+ 
